[gd_scene load_steps=2 format=3 uid="uid://rc3aggfpupcw"]

[ext_resource type="Script" path="res://scenes/virtual_controller/virtual_controller.gd" id="1_oxxko"]

[node name="virtualController" type="Node"]
process_priority = -1
script = ExtResource("1_oxxko")

[node name="tmrJump" type="Timer" parent="."]
one_shot = true

[node name="tmrAttack" type="Timer" parent="."]
one_shot = true

[node name="tmrDash" type="Timer" parent="."]
one_shot = true
